# NJR202-02

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
airflow/: Dockerfile  airflow.cfg  docker-compose-airflow.yml
airflow/dags/: dag.py
data_ingestion/: scraper.py
data_ingestion/database/: configuration.py  schema.py  upload.py
data_ingestion/message_queue/: configuration.py  producer.py  tasks.py  worker.py
docker_compose/: docker-compose-broker.yml  docker-compose-mysql.yml  docker-compose-producer.yml  docker-compose-worker.yml
